--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
 		"symfony/var-dumper": "^3.3",
 		"phpunit/phpunit": "^4.8",
 		"jakub-onderka/php-parallel-lint": "^0.9.2",
-		"jakub-onderka/php-console-highlighter": "^0.3.2"
+		"jakub-onderka/php-console-highlighter": "^0.3.2",
+		"mikey179/vfsStream": "^1.6"
 	},
 	"scripts": {
 		"lint": [
