--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
 		"php-parallel-lint/php-console-highlighter": "0.5.0",
 		"php-parallel-lint/php-parallel-lint": "1.2.0",
 		"phpunit/phpunit": "^8.5",
+		"rregeer/phpunit-coverage-check": "~0.1.4",
 		"symfony/console": "^3.3 || ^4 || ^5",
 		"symfony/var-dumper": "^3.3 || ^4 || ^5"
 	},
@@ -43,6 +44,7 @@
 			"parallel-lint . --exclude vendor",
 			"php -d 'zend_extension=xdebug.so' vendor/bin/phpunit",
 			"covers-validator",
+			"coverage-check ./coverage/clover.xml 100",
 			"phpcs -sp",
 			"minus-x check ."
 		],
