Use SPDX 3.0 license identifier
Change-Id: Ife949b5af9b0b622e151ac2ffaf0055e44cf369e

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "wikimedia/equivset",
 	"description": "Visually Equivalent Set of UTF-8 Characters",
 	"homepage": "https://www.mediawiki.org/wiki/Equivset",
-	"license": "GPL-2.0+",
+	"license": "GPL-2.0-or-later",
 	"authors": [
 		{
 			"name": "Brion Vibber",
