--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
 		"mediawiki/mediawiki-codesniffer": "16.0.0",
 		"symfony/console": "^3.3",
 		"symfony/var-dumper": "^3.3",
-		"phpunit/phpunit": "^4.8",
+		"phpunit/phpunit": "4.8.36",
 		"jakub-onderka/php-parallel-lint": "^0.9.2",
 		"jakub-onderka/php-console-highlighter": "^0.3.2",
 		"mikey179/vfsStream": "^1.6"
