--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
 		"phpunit/phpunit": "4.8.36",
 		"jakub-onderka/php-parallel-lint": "^0.9.2",
 		"jakub-onderka/php-console-highlighter": "^0.3.2",
-		"mikey179/vfsStream": "^1.6"
+		"mikey179/vfsStream": "^1.6",
+		"mediawiki/minus-x": "0.3.1"
 	},
 	"scripts": {
 		"lint": [
@@ -43,11 +44,13 @@
 		],
 		"fix": [
 			"phpcbf",
-			"phpcbf"
+			"phpcbf",
+			"minus-x fix ."
 		],
 		"test": [
 			"@lint",
-			"phpunit"
+			"phpunit",
+			"minus-x check ."
 		]
 	}
 }
