--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 	},
 	"require": {
 		"php": ">=5.5.9",
-		"wikimedia/utfnormal": "^1.1.0"
+		"wikimedia/utfnormal": "^1.1.0 || ^2.0.0"
 	},
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": "16.0.1",
