--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
 		"symfony/console": "^3.3",
 		"symfony/var-dumper": "^3.3",
 		"phpunit/phpunit": "4.8.36 || ^6.5",
-		"jakub-onderka/php-parallel-lint": "^0.9.2",
+		"jakub-onderka/php-parallel-lint": "1.0.0",
 		"jakub-onderka/php-console-highlighter": "^0.3.2",
 		"mikey179/vfsStream": "^1.6",
 		"mediawiki/minus-x": "0.3.1"
