Extend the blacklist of invisible characters
In T171846, the equivset was expanded with "invisible" characters
that should be removed from strings during the normalization process.
This patch adds the following "invisible" characters that should also
be stripped to the set:

- Line separator (2028)
- Paragraph separator (2029)
- Left-to-right embedding (202A)
- Right-to-left embedding (202B)
- Left-to-right override (202D)
- Right-to-left override (202E)
- Invisible times (2062)
- Left-to-right isolate (2066)
- Right-to-left isolate (2067)
- First strong isolate (2068)
- Reset isolate (2069)

Bug: T177024
Change-Id: I827460e5265088fdfab071e0cb5fac62562ef1ae

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -1134,6 +1134,17 @@ F0C ༌ => F0B ་
 200D ‍ => 0 NUL
 200E ‎ => 0 NUL
 200F ‏ => 0 NUL
+2028   => NUL
+2029   => NUL
+202A ‪ => NUL
+202B ‫ => NUL
+202D ‭ => NUL
+202E ‮ => NUL
+2062 ⁢ => NUL
+2066 ⁦ => NUL
+2067 ⁧ => NUL
+2068 ⁨ => NUL
+2069 ⁩ => NUL
 20A3 ₣ => 46 F
 20A4 ₤ => 4C L
 20A5 ₥ => 4D M
