--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 		}
 	},
 	"require": {
-		"php": ">=5.6.99",
+		"php": ">=7.2.0",
 		"wikimedia/utfnormal": "^1.1.0 || ^2.0.0"
 	},
 	"require-dev": {
@@ -32,11 +32,11 @@
 		"symfony/var-dumper": "^3.3",
 		"jakub-onderka/php-parallel-lint": "1.0.0",
 		"mikey179/vfsStream": "^1.6",
-		"jakub-onderka/php-console-highlighter": "0.3.2",
+		"jakub-onderka/php-console-highlighter": "0.4.0",
 		"mediawiki/mediawiki-codesniffer": "28.0.0",
-		"mediawiki/minus-x": "0.3.1",
-		"ockcyp/covers-validator": "0.5.1 || 0.6.1",
-		"phpunit/phpunit": "4.8.36 || ^6.5"
+		"mediawiki/minus-x": "0.3.2",
+		"ockcyp/covers-validator": "1.1.0",
+		"phpunit/phpunit": "^8.4"
 	},
 	"scripts": {
 		"test": [
