--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
 		"symfony/console": "^3.3",
 		"symfony/var-dumper": "^3.3",
 		"jakub-onderka/php-parallel-lint": "1.0.0",
-		"mikey179/vfsStream": "^1.6",
+		"mikey179/vfsstream": "^1.6",
 		"jakub-onderka/php-console-highlighter": "0.4.0",
 		"mediawiki/mediawiki-codesniffer": "28.0.0",
 		"mediawiki/minus-x": "0.3.2",
