--- a/composer.json
+++ b/composer.json
@@ -28,15 +28,15 @@
 		"wikimedia/utfnormal": "^1.1.0 || ^2.0.0"
 	},
 	"require-dev": {
-		"symfony/console": "^3.3 || ^4 || ^5",
-		"symfony/var-dumper": "^3.3 || ^4 || ^5",
-		"jakub-onderka/php-parallel-lint": "1.0.0",
-		"mikey179/vfsstream": "^1.6",
-		"jakub-onderka/php-console-highlighter": "0.4.0",
-		"mediawiki/mediawiki-codesniffer": "30.0.0",
+		"mediawiki/mediawiki-codesniffer": "31.0.0",
 		"mediawiki/minus-x": "1.0.0",
+		"mikey179/vfsstream": "^1.6",
 		"ockcyp/covers-validator": "1.1.1",
-		"phpunit/phpunit": "^8.5"
+		"php-parallel-lint/php-console-highlighter": "0.4.0",
+		"php-parallel-lint/php-parallel-lint": "1.0.0",
+		"phpunit/phpunit": "^8.5",
+		"symfony/console": "^3.3 || ^4 || ^5",
+		"symfony/var-dumper": "^3.3 || ^4 || ^5"
 	},
 	"scripts": {
 		"test": [
