build: Manually enable xdebug for phpcs
Bug: T255164
Change-Id: Ic1d7fc9f00d048efe8e273a34b55a8228d6e2691

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor",
-			"phpunit",
+			"php -d 'zend_extension=xdebug.so' vendor/bin/phpunit",
 			"covers-validator",
 			"phpcs -sp",
 			"minus-x check ."
