build: Upgrade phpunit to ^9.5 for PHP 8.0 compatibility
Bug: T271575
Change-Id: Id60d08340a0d3d92b87d0766c00723b2b3b8f55b

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,4 +1,8 @@
-<phpunit colors="true"
+<?xml version="1.0"?>
+<phpunit
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
+	colors="true"
 	beStrictAboutTestsThatDoNotTestAnything="true"
 	beStrictAboutChangesToGlobalState="true"
 	beStrictAboutOutputDuringTests="true">
@@ -15,4 +19,12 @@
 			<directory suffix=".php">./src</directory>
 		</whitelist>
 	</filter>
+	<coverage includeUncoveredFiles="true">
+		<include>
+			<directory suffix=".php">./src</directory>
+		</include>
+		<report>
+			<clover outputFile="./coverage/clover.xml"/>
+		</report>
+	</coverage>
 </phpunit>
