--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,10 @@
 		"mediawiki/mediawiki-codesniffer": "34.0.0",
 		"mediawiki/minus-x": "1.1.0",
 		"mikey179/vfsstream": "^1.6",
-		"ockcyp/covers-validator": "1.3.1",
+		"ockcyp/covers-validator": "1.3.3",
 		"php-parallel-lint/php-console-highlighter": "0.5.0",
 		"php-parallel-lint/php-parallel-lint": "1.2.0",
-		"phpunit/phpunit": "^8.5",
+		"phpunit/phpunit": "^8.5 || ^9.5",
 		"rregeer/phpunit-coverage-check": "~0.1.4",
 		"symfony/console": "^3.3 || ^4 || ^5",
 		"symfony/var-dumper": "^3.3 || ^4 || ^5"
@@ -42,7 +42,7 @@
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor",
-			"php -d 'zend_extension=xdebug.so' vendor/bin/phpunit",
+			"php -d 'zend_extension=xdebug.so' -d 'xdebug.mode=coverage' vendor/bin/phpunit",
 			"covers-validator",
 			"coverage-check ./coverage/clover.xml 100",
 			"phpcs -sp",
