--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
 		"ockcyp/covers-validator": "1.4.0",
 		"php-parallel-lint/php-console-highlighter": "1.0.0",
 		"php-parallel-lint/php-parallel-lint": "1.3.2",
-		"phpunit/phpunit": "^8.5 || ^9.5",
+		"phpunit/phpunit": "^9.5",
 		"rregeer/phpunit-coverage-check": "~0.1.4",
 		"symfony/console": "^3.3 || ^4 || ^5",
 		"symfony/var-dumper": "^3.3 || ^4 || ^5"
