--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 	},
 	"require": {
 		"php": ">=7.2.0",
-		"wikimedia/utfnormal": "^1.1.0 || ^2.0.0"
+		"wikimedia/utfnormal": "^1.1.0 || ^2.0.0 || ^3.0.1"
 	},
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": "34.0.0",
