--- a/composer.json
+++ b/composer.json
@@ -28,12 +28,12 @@
 		"wikimedia/utfnormal": "^1.1.0 || ^2.0.0 || ^3.0.1"
 	},
 	"require-dev": {
-		"mediawiki/mediawiki-codesniffer": "37.0.0",
+		"mediawiki/mediawiki-codesniffer": "38.0.0",
 		"mediawiki/minus-x": "1.1.1",
 		"mikey179/vfsstream": "^1.6",
 		"ockcyp/covers-validator": "1.3.3",
 		"php-parallel-lint/php-console-highlighter": "0.5.0",
-		"php-parallel-lint/php-parallel-lint": "1.3.0",
+		"php-parallel-lint/php-parallel-lint": "1.3.1",
 		"phpunit/phpunit": "^8.5 || ^9.5",
 		"rregeer/phpunit-coverage-check": "~0.1.4",
 		"symfony/console": "^3.3 || ^4 || ^5",
@@ -45,13 +45,14 @@
 			"php -d 'zend_extension=xdebug.so' -d 'xdebug.mode=coverage' vendor/bin/phpunit",
 			"covers-validator",
 			"coverage-check ./coverage/clover.xml 100",
-			"phpcs -sp",
+			"@phpcs",
 			"minus-x check ."
 		],
 		"cover": "phpunit --coverage-html coverage",
 		"fix": [
 			"minus-x fix .",
 			"phpcbf"
-		]
+		],
+		"phpcs": "phpcs -sp"
 	}
 }
