--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
 		"wikimedia/utfnormal": "^1.1.0 || ^2.0.0 || ^3.0.1"
 	},
 	"require-dev": {
+		"ext-json": "*",
 		"mediawiki/mediawiki-codesniffer": "39.0.0",
 		"mediawiki/mediawiki-phan-config": "0.11.1",
 		"mediawiki/minus-x": "1.1.1",
