Expand set for lower/upper case characters which are alone in the set
For each character which exists in the set only as lower/upper is a good
candidate to also include the upper/lower case character.
In the most cases the other case character is in the same char group

Added a test, the differences found are added in this patch set

Fixed ɯ from M to w
Create new set for Σ Ʃ

lower case character added:
ǎȃȟƞȧɋζӏամꭱꭵꭹꭺꭻꭼꮁꮃꮇꮋꮍꮎꮐꮒꮓꮞꮟꮢꮤꮥꮩꮪꮮꮯꮲꮶꮷᏺᏻᏼⓐⱨⲙ

upper case character added:
ÇÈÉÊËÌÍÎÏÑÒÓÔÕÖÙÚÛÜÝŸĆĈĊČĎĒĔĖĘĚĜĞĠĢĤĨĪĬĮĶŃŇŌŎŐŨŪŬŮŰŲŴŶŹŻŽɃȽǏǑǓǕǗǙǛǦǪǴȄȆ
ⱭꞫꞬꞪⱢƜⱮƟⱤꟅƩΆΉΣΣΫΌͿЦЯЇЊЌЎҜҠӃӦӪӮӰӲԊᲧᲳḌḖḘḚḜḠḢḤḦḨḪḶḾṀṂṆṢṬẀẂẄẆẈẎẸẺẼẾỀỂỄỆỌỲỴỶỸ
ἉἊἋἌἍἎἏἨἩἪἫἬἭἮἯὈὉὊὋὌὍὙὛὝὟᾈᾉᾊᾋᾌᾍᾎᾏᾺᾼῊῩῸⅬⅭⅮⅯ

Bug: T27619
Bug: T164180
Bug: T178010
Bug: T305781
Change-Id: I9e4c879b1ff49c17863aab1cfcb44e2235799e87

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -73,8 +73,28 @@ C2 Â => 41 A
 C3 Ã => 41 A
 C4 Ä => 41 A
 C5 Å => 41 A
+C7 Ç => 43 C
+C8 È => 45 E
+C9 É => 45 E
+CA Ê => 45 E
+CB Ë => 45 E
+CC Ì => 49 I
+CD Í => 49 I
+CE Î => 49 I
+CF Ï => 49 I
 D0 Ð => 44 D
+D1 Ñ => 4E N
+D2 Ò => 4F O
+D3 Ó => 4F O
+D4 Ô => 4F O
+D5 Õ => 4F O
+D6 Ö => 4F O
 D8 Ø => 4F O
+D9 Ù => 55 U
+DA Ú => 55 U
+DB Û => 55 U
+DC Ü => 55 U
+DD Ý => 59 Y
 DE Þ => 50 P
 DF ß => 42 B
 E0 à => 41 A
@@ -114,31 +134,51 @@ FF ÿ => 59 Y
 103 ă => 41 A
 104 Ą => 41 A
 105 ą => 41 A
+106 Ć => 43 C
 107 ć => 43 C
+108 Ĉ => 43 C
 109 ĉ => 43 C
+10A Ċ => 43 C
 10B ċ => 43 C
+10C Č => 43 C
 10D č => 43 C
+10E Ď => 44 D
 10F ď => 44 D
 110 Đ => 44 D
 111 đ => 44 D
+112 Ē => 45 E
 113 ē => 45 E
+114 Ĕ => 45 E
 115 ĕ => 45 E
+116 Ė => 45 E
 117 ė => 45 E
+118 Ę => 45 E
 119 ę => 45 E
+11A Ě => 45 E
 11B ě => 45 E
+11C Ĝ => 47 G
 11D ĝ => 47 G
+11E Ğ => 47 G
 11F ğ => 47 G
+120 Ġ => 47 G
 121 ġ => 47 G
+122 Ģ => 47 G
 123 ģ => 47 G
+124 Ĥ => 48 H
 125 ĥ => 48 H
 126 Ħ => 48 H
 127 ħ => 48 H
+128 Ĩ => 49 I
 129 ĩ => 49 I
+12A Ī => 49 I
 12B ī => 49 I
+12C Ĭ => 49 I
 12D ĭ => 49 I
+12E Į => 49 I
 12F į => 49 I
 131 ı => 31 1
 133 ĳ => 132 Ĳ
+136 Ķ => 4B K
 137 ķ => 4B K
 138 ĸ => 4B K
 139 Ĺ => 4C L
@@ -151,12 +191,17 @@ FF ÿ => 59 Y
 140 ŀ => 4C L
 141 Ł => 4C L
 142 ł => 4C L
+143 Ń => 4E N
 144 ń => 4E N
 145 Ņ => 4E N
 146 ņ => 4E N
+147 Ň => 4E N
 148 ň => 4E N
+14C Ō => 4F O
 14D ō => 4F O
+14E Ŏ => 4F O
 14F ŏ => 4F O
+150 Ő => 4F O
 151 ő => 4F O
 153 œ => 152 Œ
 154 Ŕ => 52 R
@@ -179,16 +224,28 @@ FF ÿ => 59 Y
 165 ť => 54 T
 166 Ŧ => 54 T
 167 ŧ => 54 T
+168 Ũ => 55 U
 169 ũ => 55 U
+16A Ū => 55 U
 16B ū => 55 U
+16C Ŭ => 55 U
 16D ŭ => 55 U
+16E Ů => 55 U
 16F ů => 55 U
+170 Ű => 55 U
 171 ű => 55 U
+172 Ų => 55 U
 173 ų => 55 U
+174 Ŵ => 57 W
 175 ŵ => 57 W
+176 Ŷ => 59 Y
 177 ŷ => 59 Y
+178 Ÿ => 59 Y
+179 Ź => 5A Z
 17A ź => 5A Z
+17B Ż => 5A Z
 17C ż => 5A Z
+17D Ž => 5A Z
 17E ž => 5A Z
 180 ƀ => 62 b
 181 Ɓ => 42 B
@@ -212,13 +269,17 @@ FF ÿ => 59 Y
 198 Ƙ => 4B K
 199 ƙ => 4B K
 19A ƚ => 6C l
+19C Ɯ => 57 W
 19D Ɲ => 4E N
+19E ƞ => 6E n
+19F Ɵ => 4F O
 1A1 ơ => 1A0 Ơ
 1A4 Ƥ => 50 P
 1A5 ƥ => 70 p
 1A6 Ʀ => 52 R
 1A7 Ƨ => 32 2
 1A8 ƨ => 32 2
+1A9 Ʃ => 3A3 Σ
 1AB ƫ => 54 T
 1AC Ƭ => 54 T
 1AD ƭ => 54 T
@@ -233,6 +294,7 @@ FF ÿ => 59 Y
 1BC Ƽ => 35 5
 1BD ƽ => 35 5
 1BF ƿ => 50 P
+1CF Ǐ => 49 I
 1C0 ǀ => 7C |
 1C3 ǃ => 49 I
 1C4 Ǆ => 1F1 Ǳ
@@ -240,12 +302,19 @@ FF ÿ => 59 Y
 1C9 ǉ => 1C7 Ǉ
 1CC ǌ => 1CA Ǌ
 1CD Ǎ => 41 A
+1CE ǎ => 61 a
 1D0 ǐ => 49 I
+1D1 Ǒ => 4F O
 1D2 ǒ => 4F O
+1D3 Ǔ => 55 U
 1D4 ǔ => 55 U
+1D5 Ǖ => 55 U
 1D6 ǖ => 55 U
+1D7 Ǘ => 55 U
 1D8 ǘ => 55 U
+1D9 Ǚ => 55 U
 1DA ǚ => 55 U
+1DB Ǜ => 55 U
 1DC ǜ => 55 U
 1DE Ǟ => 41 A
 1DF ǟ => 41 A
@@ -253,9 +322,12 @@ FF ÿ => 59 Y
 1E4 Ǥ => 47 G
 1E0 Ǡ => 41 A
 1E5 ǥ => 47 G
+1E6 Ǧ => 47 G
 1E7 ǧ => 47 G
+1EA Ǫ => 4F O
 1EB ǫ => 4F O
 1F3 ǳ => 1F1 Ǳ
+1F4 Ǵ => 47 G
 1F5 ǵ => 47 G
 1F7 Ƿ => 50 P
 1FA Ǻ => 41 A
@@ -265,7 +337,10 @@ FF ÿ => 59 Y
 200 Ȁ => 41 A
 201 ȁ => 41 A
 202 Ȃ => 41 A
+203 ȃ => 61 a
+204 Ȅ => 45 E
 205 ȅ => 45 E
+206 Ȇ => 45 E
 207 ȇ => 45 E
 210 Ȑ => 52 R
 211 ȑ => 52 R
@@ -276,17 +351,22 @@ FF ÿ => 59 Y
 21C Ȝ => 33 3
 21D ȝ => 33 3
 21E Ȟ => 48 H
+21F ȟ => 68 h
 220 Ƞ => 6E n
 222 Ȣ => 38 8
 223 ȣ => 38 8
 224 Ȥ => 5A Z
 225 ȥ => 5A Z
 226 Ȧ => 41 A
+227 ȧ => 61 a
 228 Ȩ => 45 E
 229 ȩ => 45 E
 232 Ȳ => 59 Y
 233 ȳ => 79 y
+23D Ƚ => 4C L
+243 Ƀ => 42 B
 24A Ɋ => 51 Q
+24B ɋ => 71 q
 251 ɑ => 41 A
 253 ɓ => 42 B
 256 ɖ => 44 D
@@ -304,7 +384,7 @@ FF ÿ => 59 Y
 269 ɩ => 49 I
 26B ɫ => 49 I
 26D ɭ => 49 I
-26F ɯ => 4D M
+26F ɯ => 77 w
 271 ɱ => 4D M
 272 ɲ => 4E N
 273 ɳ => 4E N
@@ -332,6 +412,10 @@ FF ÿ => 59 Y
 2B5 ʵ => 52 R
 2B6 ʶ => 52 R
 2B8 ʸ => 59 Y
+386 Ά => 41 A
+389 Ή => 48 H
+37F Ϳ => 4A J
+38C Ό => 4F O
 38E Ύ => 59 Y
 391 Α => 41 A
 392 Β => 42 B
@@ -350,6 +434,7 @@ FF ÿ => 59 Y
 3A5 Υ => 59 Y
 3A6 Φ => 278 ɸ
 3A7 Χ => 58 X
+3AB Ϋ => 59 Y
 3AC ά => 41 A
 3AE ή => 48 H
 3B1 α => 61 a
@@ -357,6 +442,7 @@ FF ÿ => 59 Y
 3B3 γ => 59 Y
 3B4 δ => 394 Δ
 3B5 ε => 45 E
+3B6 ζ => 5A Z
 3B7 η => 4E N
 3B8 θ => 4F O
 3B9 ι => 49 I
@@ -393,8 +479,12 @@ FF ÿ => 59 Y
 404 Є => 45 E
 405 Ѕ => 35 5
 406 І => 31 1
+407 Ї => 49 I
 408 Ј => 4A J
+40A Њ => 48 H
+40C Ќ => 4B K
 40B Ћ => 48 H
+40E Ў => 79 y
 410 А => 41 A
 411 Б => 36 6
 412 В => 42 B
@@ -412,9 +502,11 @@ FF ÿ => 59 Y
 423 У => 79 y
 424 Ф => 278 ɸ
 425 Х => 58 X
+426 Ц => 55 U
 427 Ч => 34 4
 42A Ъ => 42 B
 42C Ь => 42 B
+42F Я => 52 R
 430 а => 41 A
 431 б => 42 B
 432 в => 42 B
@@ -470,9 +562,11 @@ FF ÿ => 59 Y
 499 ҙ => 33 3
 49A Қ => 4B K
 49B қ => 4B K
+49C Ҝ => 4B K
 49D ҝ => 4B K
 49E Ҟ => 4B K
 49F ҟ => 4B K
+4A0 Ҡ => 4B K
 4A1 ҡ => 4B K
 4A2 Ң => 48 H
 4A3 ң => 48 H
@@ -494,6 +588,7 @@ FF ÿ => 59 Y
 4BE Ҿ => 4BC Ҽ
 4BF ҿ => 4BC Ҽ
 4C0 Ӏ => 31 1
+4C3 Ӄ => 4B K
 4C4 ӄ => 4B K
 4C5 Ӆ => 41B Л
 4C6 ӆ => 41B Л
@@ -505,21 +600,28 @@ FF ÿ => 59 Y
 4CC ӌ => 79 y
 4CD Ӎ => 4D M
 4CE ӎ => 4D M
+4CF ӏ => 49 I
 4D4 Ӕ => C6 Æ
 4D5 ӕ => C6 Æ
 4D8 Ә => 1DD ǝ
 4D9 ә => 1DD ǝ
 4E0 Ӡ => 33 3
 4E1 ӡ => 33 3
+4E6 Ӧ => 4F O
 4E7 ӧ => 4F O
 4E8 Ө => 4F O
 4E9 ө => 4F O
+4EA Ӫ => 4F O
 4EB ӫ => 4F O
+4EE Ӯ => 79 y
 4EF ӯ => 79 y
+4F0 Ӱ => 79 y
 4F1 ӱ => 79 y
+4F2 Ӳ => 79 y
 4F3 ӳ => 79 y
 500 Ԁ => 64 d
 501 ԁ => 64 d
+50A Ԋ => 48 H
 50B ԋ => 48 H
 50C Ԍ => 47 G
 50D ԍ => 47 G
@@ -561,9 +663,11 @@ FF ÿ => 59 Y
 554 Ք => 584 ք
 555 Օ => 4F O
 556 Ֆ => 586 ֆ
+561 ա => 77 w
 563 գ => 71 q
 566 զ => 71 q
 570 հ => 68 h
+574 մ => 75 u
 575 յ => 6A j
 578 ո => 6E n
 57C ռ => 6E n
@@ -760,6 +864,9 @@ F0C ༌ => F0B ་
 13F2 Ᏺ => 68 h
 13F3 Ᏻ => 47 G
 13F4 Ᏼ => 42 B
+13FA ᏺ => 68 h
+13FB ᏻ => 47 G
+13FC ᏼ => 42 B
 1403 ᐃ => 394 Δ
 1427 ᐧ => B7 ·
 142F ᐯ => 56 V
@@ -809,6 +916,8 @@ F0C ༌ => F0B ་
 1810 ᠐ => 30 0
 1896 ᢖ => 185C ᡜ
 1959 ᥙ => 55 U
+1CA7 Ყ => 79 y
+1CB3 Ჳ => 33 3
 1D04 ᴄ => 43 C
 1D05 ᴅ  => 44 D
 1D06 ᴆ  => 44 D
@@ -826,21 +935,37 @@ F0C ༌ => F0B ་
 1D22 ᴢ => 5A Z
 1E00 Ḁ => 41 A
 1E01 ḁ => 41 A
+1E0C Ḍ => 44 D
 1E0D ḍ => 44 D
+1E16 Ḗ => 45 E
 1E17 ḗ => 45 E
+1E18 Ḙ => 45 E
 1E19 ḙ => 45 E
+1E1A Ḛ => 45 E
 1E1B ḛ => 45 E
+1E1C Ḝ => 45 E
 1E1D ḝ => 45 E
+1E20 Ḡ => 47 G
 1E21 ḡ => 47 G
+1E22 Ḣ => 48 H
 1E23 ḣ => 48 H
+1E24 Ḥ => 48 H
 1E25 ḥ => 48 H
+1E26 Ḧ => 48 H
 1E27 ḧ => 48 H
+1E28 Ḩ => 48 H
 1E29 ḩ => 48 H
+1E2A Ḫ => 48 H
 1E2B ḫ => 48 H
+1E36 Ḷ => 4C L
 1E37 ḷ => 4C L
+1E3E Ḿ => 4D M
 1E3F ḿ => 4D M
+1E40 Ṁ => 4D M
 1E41 ṁ => 4D M
+1E42 Ṃ => 4D M
 1E43 ṃ => 4D M
+1E46 Ṇ => 4E N
 1E47 ṇ => 4E N
 1E54 Ṕ => 50 P
 1E55 ṕ => 50 P
@@ -854,13 +979,21 @@ F0C ༌ => F0B ་
 1E5D ṝ => 52 R
 1E5E Ṟ => 52 R
 1E5F ṟ => 52 R
+1E62 Ṣ => 53 S
 1E63 ṣ => 53 S
+1E6C Ṭ => 54 T
 1E6D ṭ => 54 T
+1E80 Ẁ => 57 W
 1E81 ẁ => 57 W
+1E82 Ẃ => 57 W
 1E83 ẃ => 57 W
+1E84 Ẅ => 57 W
 1E85 ẅ => 57 W
+1E86 Ẇ => 57 W
 1E87 ẇ => 57 W
+1E88 Ẉ => 57 W
 1E89 ẉ => 57 W
+1E8E Ẏ => 59 Y
 1E8F ẏ => 59 Y
 1E99 ẙ => 79 y
 1EA0 Ạ => 41 A
@@ -887,18 +1020,31 @@ F0C ༌ => F0B ་
 1EB5 ẵ => 41 A
 1EB6 Ặ => 41 A
 1EB7 ặ => 41 A
+1EB8 Ẹ => 45 E
 1EB9 ẹ => 45 E
+1EBA Ẻ => 45 E
 1EBB ẻ => 45 E
+1EBC Ẽ => 45 E
 1EBD ẽ => 45 E
+1EBE Ế => 45 E
 1EBF ế => 45 E
+1EC0 Ề => 45 E
 1EC1 ề => 45 E
+1EC2 Ể => 45 E
 1EC3 ể => 45 E
+1EC4 Ễ => 45 E
 1EC5 ễ => 45 E
+1EC6 Ệ => 45 E
 1EC7 ệ => 45 E
+1ECC Ọ => 4F O
 1ECD ọ => 4F O
+1EF2 Ỳ => 59 Y
 1EF3 ỳ => 59 Y
+1EF4 Ỵ => 59 Y
 1EF5 ỵ => 59 Y
+1EF6 Ỷ => 59 Y
 1EF7 ỷ => 59 Y
+1EF8 Ỹ => 59 Y
 1EF9 ỹ => 59 Y
 1F01 ἁ => 41 A
 1F02 ἂ => 41 A
@@ -907,6 +1053,13 @@ F0C ༌ => F0B ་
 1F05 ἅ => 41 A
 1F06 ἆ => 41 A
 1F07 ἇ => 41 A
+1F09 Ἁ => 41 A
+1F0A Ἂ => 41 A
+1F0B Ἃ => 41 A
+1F0C Ἄ => 41 A
+1F0D Ἅ => 41 A
+1F0E Ἆ => 41 A
+1F0F Ἇ => 41 A
 1F20 ἠ => 48 H
 1F21 ἡ => 48 H
 1F22 ἢ => 48 H
@@ -915,16 +1068,34 @@ F0C ༌ => F0B ་
 1F25 ἥ => 48 H
 1F26 ἦ => 48 H
 1F27 ἧ => 48 H
+1F28 Ἠ => 48 H
+1F29 Ἡ => 48 H
+1F2A Ἢ => 48 H
+1F2B Ἣ => 48 H
+1F2C Ἤ => 48 H
+1F2D Ἥ => 48 H
+1F2E Ἦ => 48 H
+1F2F Ἧ => 48 H
 1F40 ὀ => 4F O
 1F41 ὁ => 4F O
 1F42 ὂ => 4F O
 1F43 ὃ => 4F O
 1F44 ὄ => 4F O
 1F45 ὅ => 4F O
+1F48 Ὀ => 4F O
+1F49 Ὁ => 4F O
+1F4A Ὂ => 4F O
+1F4B Ὃ => 4F O
+1F4C Ὄ => 4F O
+1F4D Ὅ => 4F O
 1F51 ὑ => 59 Y
 1F53 ὓ => 59 Y
 1F55 ὕ => 59 Y
 1F57 ὗ => 59 Y
+1F59 Ὑ => 59 Y
+1F5B Ὓ => 59 Y
+1F5D Ὕ => 59 Y
+1F5F Ὗ => 59 Y
 1F70 ὰ => 41 A
 1F74 ὴ => 48 H
 1F78 ὸ => 4F O
@@ -937,12 +1108,26 @@ F0C ༌ => F0B ་
 1F85 ᾅ => 41 A
 1F86 ᾆ => 41 A
 1F87 ᾇ => 41 A
+1F88 ᾈ => 41 A
+1F89 ᾉ => 41 A
+1F8A ᾊ => 41 A
+1F8B ᾋ => 41 A
+1F8C ᾌ => 41 A
+1F8D ᾍ => 41 A
+1F8E ᾎ => 41 A
+1F8F ᾏ => 41 A
 1F90 ᾐ => 48 H
+1F98 ᾘ => 48 H
 1FB3 ᾳ => 41 A
+1FBA Ὰ => 41 A
+1FBC ᾼ => 41 A
+1FCA Ὴ => 48 H
 1FE0 ῠ => 59 Y
 1FE1 ῡ => 59 Y
 1FE8 Ῠ => 59 Y
+1FE9 Ῡ => 59 Y
 1FEA Ὺ => 59 Y
+1FF8 Ὸ => 4F O
 200A   => 0 NUL
 200B ​ => 0 NUL
 200C ‌ => 0 NUL
@@ -971,13 +1156,24 @@ F0C ༌ => F0B ་
 2147 ⅇ => 45 E
 2148 ⅈ => 49 I
 2149 ⅉ => 4A J
+216C Ⅼ => 4C L
+216D Ⅽ => 43 C
+216E Ⅾ => 44 D
+216F Ⅿ => 4D M
 217C ⅼ => 4C L
 217D ⅽ => 43 C
 217E ⅾ => 44 D
 217F ⅿ => 4D M
 24B6 Ⓐ => 41 A
+24D0 ⓐ => 61 a
+2C62 Ɫ => 4C L
+2C64 Ɽ => 52 R
 2C67 Ⱨ => 48 H
+2C68 ⱨ => 68 h
+2C6D Ɑ => 61 a
+2C6E Ɱ => 4D M
 2C98 Ⲙ => 4D M
+2C99 ⲙ => 4D M
 2D31 ⴱ => 3B8 θ
 2D39 ⴹ => 45 E
 2D54 ⵔ => 30 0
@@ -5423,6 +5619,37 @@ A4BE ꒾ => A2B1 ꊱ
 A4BF ꒿ => A259 ꉙ
 A4C0 ꓀ => A3AB ꎫ
 A4C2 ꓂ => A3B5 ꎵ
+A7AA Ɦ => 48 H
+A7AB Ɜ => 33 3
+A7AC Ɡ => 67 g
+A7C5 Ʂ => 53 S
+AB71 ꭱ => 52 R
+AB75 ꭵ => 69 i
+AB79 ꭹ => 79 y
+AB7A ꭺ => 41 A
+AB7B ꭻ => 4A J
+AB7C ꭼ => 45 E
+AB81 ꮁ => 72 r
+AB83 ꮃ => 77 w
+AB87 ꮇ => 4D M
+AB8B ꮋ => 48 H
+AB8D ꮍ => 79 y
+AB8E ꮎ => 6F o
+AB90 ꮐ => 47 G
+AB92 ꮒ => 68 h
+AB93 ꮓ => 7A z
+AB9E ꮞ => 34 4
+AB9F ꮟ => 62 b
+ABA2 ꮢ => 52 R
+ABA4 ꮤ => 77 w
+ABA5 ꮥ => 73 s
+ABA9 ꮩ => 76 v
+ABAA ꮪ => 73 s
+ABAE ꮮ => 4C L
+ABAF ꮯ => 63 c
+ABB2 ꮲ => 70 p
+ABB6 ꮶ => 4B K
+ABB7 ꮷ => 64 d
 FED9 ﻙ => 6A9 ک
 FEDA ﻚ => 6A9 ک
 FF10 ０ => 0030 0
