Add characters from the "Phonetic Extensions" Unicode Block (1D00-1DBF)
Add some characters from the "Phonetic Extensions" Unicode Block and
add characters from the "Phonetic Extensions Supplement" Unicode Block

Character added:
ᴀᴁᴂᴃᴈᴉᴐᴑᴒᴓᴔᴕᴙᴚᴜᴝᴞᴟᴣᴤᴦᴧᴨᴩᴪᴫᴬᴭᴮᴯᴰᴱᴲᴳᴴᴵᴶᴷᴸᴹᴺᴻᴼᴽᴾᴿᵀᵁᵂᵃᵄᵅᵆᵇᵈᵉᵊᵋᵌᵍᵎᵏᵐᵑᵒᵓᵔᵕᵖᵗᵘᵙᵚ
ᵛᵜᵝᵞᵟᵠᵡᵢᵣᵤᵥᵦᵧᵨᵩᵪᵬᵭᵮᵯᵰᵱᵲᵳᵴᵵᵶᵷᵸᵹᵻᵼᵽᵾᵿᶀᶁᶂᶃᶄᶅᶆᶇᶈᶉᶊᶋᶌᶍᶎᶏᶐᶑᶒᶓᶔᶕᶖᶗᶘᶙᶚᶛᶜᶝᶞᶟᶠᶡᶢᶣᶤ
ᶥᶦᶧᶨᶩᶪᶫᶬᶭᶮᶯᶰᶱᶲᶳᶴᶵᶶᶷᶸᶹᶺᶻᶼᶽᶾᶿ

New sets:
ᴕᴖᴗᴥ

Not added:
ᵫ (U+1D6B), ᵺ (U+1D7A)

Upper case for the added characters:
ⱣꝽꟆ

Bug: T164180
Change-Id: Ibea3c4bb3d3bbfa394dd59374f920fdb63fb59c2

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -413,7 +413,7 @@ FF ÿ => 79 y
 282 ʂ => 35 5
 283 ʃ => 53 S
 288 ʈ => 74 t
-28A ʊ => 59 Y
+28A ʊ => 55 U
 28B ʋ => 55 U
 28F ʏ => 59 Y
 290 ʐ => 5A Z
@@ -966,21 +966,193 @@ F0C ༌ => F0B ་
 1959 ᥙ => 55 U
 1CA7 Ყ => 79 y
 1CB3 Ჳ => 33 3
+1D00 ᴀ => 41 A
+1D01 ᴁ => C6 Æ
+1D02 ᴂ => E6 æ
+1D03 ᴃ => 42 B
 1D04 ᴄ => 43 C
 1D05 ᴅ  => 44 D
 1D06 ᴆ  => 44 D
 1D07 ᴇ  => 45 E
+1D08 ᴈ => 33 3
+1D09 ᴉ => 69 i
 1D0A ᴊ  => 4A J
 1D0B ᴋ  => 4B K
 1D0C ᴌ  => 4C L
 1D0D ᴍ  => 4D M
 1D0E ᴎ  => 4E N
 1D0F ᴏ  => 4F O
+1D10 ᴐ => 63 c
+1D11 ᴑ => 6F o
+1D12 ᴒ => 63 c
+1D13 ᴓ => 6F o
+1D14 ᴔ => 153 œ
+1D15 ᴕ => 222 Ȣ
 1D18 ᴘ  => 50 P
+1D19 ᴙ => 52 R
+1D1A ᴚ => 52 R
 1D1B ᴛ  => 54 T
+1D1C ᴜ => 75 u
+1D1D ᴝ => 75 u
+1D1E ᴞ => 75 u
+1D1F ᴟ => 6D m
 1D20 ᴠ  => 56 V
 1D21 ᴡ  => 57 W
 1D22 ᴢ => 5A Z
+1D23 ᴣ => 1B7 Ʒ
+1D24 ᴤ => 32 2
+1D26 ᴦ => 393 Γ
+1D27 ᴧ => 39B Λ
+1D28 ᴨ => 3A0 Π
+1D29 ᴩ => 70 p
+1D2A ᴪ => 3C8 ψ
+1D2B ᴫ => 41B Л
+1D2C ᴬ => 41 A
+1D2D ᴭ => C6 Æ
+1D2E ᴮ => 42 B
+1D2F ᴯ => 42 B
+1D30 ᴰ => 44 D
+1D31 ᴱ => 45 E
+1D32 ᴲ => 45 E
+1D33 ᴳ => 47 G
+1D34 ᴴ => 48 H
+1D35 ᴵ => 49 I
+1D36 ᴶ => 4A J
+1D37 ᴷ => 4B K
+1D38 ᴸ => 4C L
+1D39 ᴹ => 4D M
+1D3A ᴺ => 4E N
+1D3B ᴻ => 4E N
+1D3C ᴼ => 4F O
+1D3D ᴽ => 1D15 ᴕ
+1D3E ᴾ => 50 P
+1D3F ᴿ => 52 R
+1D40 ᵀ => 54 T
+1D41 ᵁ => 55 U
+1D42 ᵂ => 57 W
+1D43 ᵃ => 61 a
+1D44 ᵄ => 61 a
+1D45 ᵅ => 3B1 α
+1D46 ᵆ => E6 æ
+1D47 ᵇ => 62 b
+1D48 ᵈ => 64 d
+1D49 ᵉ => 65 e
+1D4A ᵊ => 18F Ə
+1D4B ᵋ => 25B ɛ
+1D4C ᵌ => 1D4B ᵋ
+1D4D ᵍ => 67 g
+1D4E ᵎ => 69 i
+1D4F ᵏ => 6B k
+1D50 ᵐ => 6D m
+1D51 ᵑ => 14B ŋ
+1D52 ᵒ => 6F o
+1D53 ᵓ => 254 ɔ
+1D54 ᵔ => 1D16 ᴖ
+1D55 ᵕ => 1D17 ᴗ
+1D56 ᵖ => 70 p
+1D57 ᵗ => 74 t
+1D58 ᵘ => 75 u
+1D59 ᵙ => 75 u
+1D5A ᵚ => 77 w
+1D5B ᵛ => 76 v
+1D5C ᵜ => 1D25 ᴥ
+1D5D ᵝ => 3B2 β
+1D5E ᵞ => 3B3 γ
+1D5F ᵟ => 3B4 δ
+1D60 ᵠ => 3C6 φ
+1D61 ᵡ => 3C7 χ
+1D62 ᵢ => 69 i
+1D63 ᵣ => 72 r
+1D64 ᵤ => 75 u
+1D65 ᵥ => 76 v
+1D66 ᵦ => 3B2 β
+1D67 ᵧ => 3B3 γ
+1D68 ᵨ => 3F1 ϱ
+1D69 ᵩ => 3C6 φ
+1D6A ᵪ => 3C7 χ
+1D6C ᵬ => 62 b
+1D6D ᵭ => 64 d
+1D6E ᵮ => 66 f
+1D6F ᵯ => 6D m
+1D70 ᵰ => 6E n
+1D71 ᵱ => 70 p
+1D72 ᵲ => 72 r
+1D73 ᵳ => 72 r
+1D74 ᵴ => 73 s
+1D75 ᵵ => 74 t
+1D76 ᵶ => 7A z
+1D77 ᵷ => 67 g
+1D78 ᵸ => 48 H
+1D79 ᵹ => 67 g
+1D7B ᵻ => 49 I
+1D7C ᵼ => 49 I
+1D7D ᵽ => 70 p
+1D7E ᵾ => 55 U
+1D7F ᵿ => 28A ʊ
+1D80 ᶀ => 62 b
+1D81 ᶁ => 64 d
+1D82 ᶂ => 66 f
+1D83 ᶃ => 67 g
+1D84 ᶄ => 6B k
+1D85 ᶅ => 6C l
+1D86 ᶆ => 6D m
+1D87 ᶇ => 6E n
+1D88 ᶈ => 70 p
+1D89 ᶉ => 72 r
+1D8A ᶊ => 73 s
+1D8B ᶋ => 283 ʃ
+1D8C ᶌ => 76 v
+1D8D ᶍ => 78 x
+1D8E ᶎ => 7A z
+1D8F ᶏ => 61 a
+1D90 ᶐ => 61 a
+1D91 ᶑ => 64 d
+1D92 ᶒ => 65 e
+1D93 ᶓ => 25B ɛ
+1D94 ᶔ => 1D93 ᶓ
+1D95 ᶕ => 1DD ǝ
+1D96 ᶖ => 69 i
+1D97 ᶗ => 254 ɔ
+1D98 ᶘ => 283 ʃ
+1D99 ᶙ => 75 u
+1D9A ᶚ => 292 ʒ
+1D9B ᶛ => 61 a
+1D9C ᶜ => 63 c
+1D9D ᶝ => 63 c
+1D9E ᶞ => F0 ð
+1D9F ᶟ => 33 3
+1DA0 ᶠ => 66 f
+1DA1 ᶡ => 6A j
+1DA2 ᶢ => 67 g
+1DA3 ᶣ => 68 h
+1DA4 ᶤ => 69 i
+1DA5 ᶥ => 3B9 ι
+1DA6 ᶦ => 49 I
+1DA7 ᶧ => 49 I
+1DA8 ᶨ => 6A j
+1DA9 ᶩ => 6C l
+1DAA ᶪ => 6C l
+1DAB ᶫ => 4C L
+1DAC ᶬ => 6D m
+1DAD ᶭ => 77 w
+1DAE ᶮ => 6E n
+1DAF ᶯ => 6E n
+1DB0 ᶰ => 4E N
+1DB1 ᶱ => 3B8 θ
+1DB2 ᶲ => 278 ɸ
+1DB3 ᶳ => 73 s
+1DB4 ᶴ => 283 ʃ
+1DB5 ᶵ => 74 t
+1DB6 ᶶ => 75 u
+1DB7 ᶷ => 28A ʊ
+1DB8 ᶸ => 75 u
+1DB9 ᶹ => 76 v
+1DBA ᶺ => 39B Λ
+1DBB ᶻ => 7A z
+1DBC ᶼ => 7A z
+1DBD ᶽ => 7A z
+1DBE ᶾ => 292 ʒ
+1DBF ᶿ => 3B8 θ
 1E00 Ḁ => 41 A
 1E01 ḁ => 61 a
 1E0C Ḍ => 44 D
@@ -1579,6 +1751,7 @@ F0C ༌ => F0B ་
 2792 ➒ => 39 9
 2793 ➓ => 2469 ⑩
 2C62 Ɫ => 4C L
+2C63 Ᵽ => 50 P
 2C64 Ɽ => 52 R
 2C67 Ⱨ => 48 H
 2C68 ⱨ => 68 h
@@ -6031,10 +6204,12 @@ A4BE ꒾ => A2B1 ꊱ
 A4BF ꒿ => A259 ꉙ
 A4C0 ꓀ => A3AB ꎫ
 A4C2 ꓂ => A3B5 ꎵ
+A77D Ᵹ => 1D79 ᵹ
 A7AA Ɦ => 48 H
 A7AB Ɜ => 33 3
 A7AC Ɡ => 67 g
 A7C5 Ʂ => 53 S
+A7C6 Ᶎ => 5A Z
 AB46 ꭆ => 52 R
 AB71 ꭱ => 52 R
 AB75 ꭵ => 69 i
