Map modified to unmodified Greek characters
Note this patch is intentionally made so that the output doesn't
change. It's just to make managing the input file easier.

Change-Id: Ifa1f2c7ed9b7b5ab090d36745abec4cd6699824e

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -434,7 +434,7 @@ FF ÿ => 79 y
 3A5 Υ => 59 Y
 3A6 Φ => 278 ɸ
 3A7 Χ => 58 X
-3AB Ϋ => 59 Y
+3AB Ϋ => 3A5 Υ
 3AC ά => 61 a
 3AE ή => 48 H
 3B1 α => 61 a
@@ -462,11 +462,11 @@ FF ÿ => 79 y
 3C7 χ => 58 X
 3C8 ψ => 3A8 Ψ
 3C9 ω => 77 w
-3CB ϋ => 59 Y
-3CC ό => 4F O
-3CD ύ => 59 Y
-3D2 ϒ => 59 Y
-3D3 ϓ => 59 Y
+3CB ϋ => 3C5 υ
+3CC ό => 3BF ο
+3CD ύ => 3C5 υ
+3D2 ϒ => 3B3 γ
+3D3 ϓ => 3B3 γ
 3D5 ϕ => 278 ɸ
 3DC Ϝ => 46 F
 3DD ϝ => 66 f
@@ -1046,20 +1046,20 @@ F0C ༌ => F0B ་
 1EF7 ỷ => 79 y
 1EF8 Ỹ => 59 Y
 1EF9 ỹ => 79 y
-1F01 ἁ => 61 a
-1F02 ἂ => 61 a
-1F03 ἃ => 61 a
-1F04 ἄ => 61 a
-1F05 ἅ => 61 a
-1F06 ἆ => 61 a
-1F07 ἇ => 61 a
-1F09 Ἁ => 41 A
-1F0A Ἂ => 41 A
-1F0B Ἃ => 41 A
-1F0C Ἄ => 41 A
-1F0D Ἅ => 41 A
-1F0E Ἆ => 41 A
-1F0F Ἇ => 41 A
+1F01 ἁ => 3B1 α
+1F02 ἂ => 3B1 α
+1F03 ἃ => 3B1 α
+1F04 ἄ => 3B1 α
+1F05 ἅ => 3B1 α
+1F06 ἆ => 3B1 α
+1F07 ἇ => 3B1 α
+1F09 Ἁ => 391 Α
+1F0A Ἂ => 391 Α
+1F0B Ἃ => 391 Α
+1F0C Ἄ => 391 Α
+1F0D Ἅ => 391 Α
+1F0E Ἆ => 391 Α
+1F0F Ἇ => 391 Α
 1F20 ἠ => 48 H
 1F21 ἡ => 48 H
 1F22 ἢ => 48 H
@@ -1068,66 +1068,66 @@ F0C ༌ => F0B ་
 1F25 ἥ => 48 H
 1F26 ἦ => 48 H
 1F27 ἧ => 48 H
-1F28 Ἠ => 48 H
-1F29 Ἡ => 48 H
-1F2A Ἢ => 48 H
-1F2B Ἣ => 48 H
-1F2C Ἤ => 48 H
-1F2D Ἥ => 48 H
-1F2E Ἦ => 48 H
-1F2F Ἧ => 48 H
-1F40 ὀ => 6F o
-1F41 ὁ => 6F o
-1F42 ὂ => 6F o
-1F43 ὃ => 6F o
-1F44 ὄ => 6F o
-1F45 ὅ => 6F o
-1F48 Ὀ => 4F O
-1F49 Ὁ => 4F O
-1F4A Ὂ => 4F O
-1F4B Ὃ => 4F O
-1F4C Ὄ => 4F O
-1F4D Ὅ => 4F O
-1F51 ὑ => 59 Y
-1F53 ὓ => 59 Y
-1F55 ὕ => 59 Y
-1F57 ὗ => 59 Y
-1F59 Ὑ => 59 Y
-1F5B Ὓ => 59 Y
-1F5D Ὕ => 59 Y
-1F5F Ὗ => 59 Y
-1F70 ὰ => 61 a
+1F28 Ἠ => 397 Η
+1F29 Ἡ => 397 Η
+1F2A Ἢ => 397 Η
+1F2B Ἣ => 397 Η
+1F2C Ἤ => 397 Η
+1F2D Ἥ => 397 Η
+1F2E Ἦ => 397 Η
+1F2F Ἧ => 397 Η
+1F40 ὀ => 3BF ο
+1F41 ὁ => 3BF ο
+1F42 ὂ => 3BF ο
+1F43 ὃ => 3BF ο
+1F44 ὄ => 3BF ο
+1F45 ὅ => 3BF ο
+1F48 Ὀ => 39F Ο
+1F49 Ὁ => 39F Ο
+1F4A Ὂ => 39F Ο
+1F4B Ὃ => 39F Ο
+1F4C Ὄ => 39F Ο
+1F4D Ὅ => 39F Ο
+1F51 ὑ => 3C5 υ
+1F53 ὓ => 3C5 υ
+1F55 ὕ => 3C5 υ
+1F57 ὗ => 3C5 υ
+1F59 Ὑ => 3A5 Υ
+1F5B Ὓ => 3A5 Υ
+1F5D Ὕ => 3A5 Υ
+1F5F Ὗ => 3A5 Υ
+1F70 ὰ => 3B1 α
 1F74 ὴ => 48 H
-1F78 ὸ => 6F o
-1F7A ὺ => 59 Y
-1F80 ᾀ => 61 a
-1F81 ᾁ => 61 a
-1F82 ᾂ => 61 a
-1F83 ᾃ => 61 a
-1F84 ᾄ => 61 a
-1F85 ᾅ => 61 a
-1F86 ᾆ => 61 a
-1F87 ᾇ => 61 a
-1F88 ᾈ => 41 A
-1F89 ᾉ => 41 A
-1F8A ᾊ => 41 A
-1F8B ᾋ => 41 A
-1F8C ᾌ => 41 A
-1F8D ᾍ => 41 A
-1F8E ᾎ => 41 A
-1F8F ᾏ => 41 A
+1F78 ὸ => 3BF ο
+1F7A ὺ => 3C5 υ
+1F80 ᾀ => 3B1 α
+1F81 ᾁ => 3B1 α
+1F82 ᾂ => 3B1 α
+1F83 ᾃ => 3B1 α
+1F84 ᾄ => 3B1 α
+1F85 ᾅ => 3B1 α
+1F86 ᾆ => 3B1 α
+1F87 ᾇ => 3B1 α
+1F88 ᾈ => 391 Α
+1F89 ᾉ => 391 Α
+1F8A ᾊ => 391 Α
+1F8B ᾋ => 391 Α
+1F8C ᾌ => 391 Α
+1F8D ᾍ => 391 Α
+1F8E ᾎ => 391 Α
+1F8F ᾏ => 391 Α
 1F90 ᾐ => 48 H
-1F98 ᾘ => 48 H
-1FB3 ᾳ => 61 a
-1FBA Ὰ => 41 A
-1FBC ᾼ => 41 A
-1FCA Ὴ => 48 H
-1FE0 ῠ => 59 Y
-1FE1 ῡ => 59 Y
-1FE8 Ῠ => 59 Y
-1FE9 Ῡ => 59 Y
-1FEA Ὺ => 59 Y
-1FF8 Ὸ => 4F O
+1F98 ᾘ => 397 Η
+1FB3 ᾳ => 3B1 α
+1FBA Ὰ => 391 Α
+1FBC ᾼ => 391 Α
+1FCA Ὴ => 397 Η
+1FE0 ῠ => 3C5 υ
+1FE1 ῡ => 3C5 υ
+1FE8 Ῠ => 3A5 Υ
+1FE9 Ῡ => 3A5 Υ
+1FEA Ὺ => 3A5 Υ
+1FF8 Ὸ => 39F Ο
 200A   => 0 NUL
 200B ​ => 0 NUL
 200C ‌ => 0 NUL
