Add many more Greek characters from the 0370+ and 1F00+ ranges
Note: I noticed some weird, probably wrong mappings in these ranges.
For example, there is a "ν" in the group "N" and a lot of u-shaped
characters in the group "Y". I would like to discuss these in a later
patch.

Change-Id: I376779e11f552107515a760737b1ce58c2a04cf3

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -430,11 +430,22 @@ FF ÿ => 79 y
 2B5 ʵ => 52 R
 2B6 ʶ => 52 R
 2B8 ʸ => 59 Y
+372 Ͳ => 54 T
+373 ͳ => 372 Ͳ
+376 Ͷ => 4E N
+377 ͷ => 376 Ͷ
+37B ͻ => 3F2 ϲ
+37C ͼ => 3F2 ϲ
+37D ͽ => 37C ͼ
 37F Ϳ => 4A J
-386 Ά => 41 A
-389 Ή => 48 H
-38C Ό => 4F O
-38E Ύ => 59 Y
+386 Ά => 391 Α
+388 Έ => 395 Ε
+389 Ή => 397 Η
+38A Ί => 399 Ι
+38C Ό => 39F Ο
+38E Ύ => 3A5 Υ
+38F Ώ => 3A9 Ω
+390 ΐ => 3B9 ι
 391 Α => 41 A
 392 Β => 42 B
 393 Γ => 52 R
@@ -452,9 +463,13 @@ FF ÿ => 79 y
 3A5 Υ => 59 Y
 3A6 Φ => 278 ɸ
 3A7 Χ => 58 X
+3AA Ϊ => 399 Ι
 3AB Ϋ => 3A5 Υ
-3AC ά => 61 a
-3AE ή => 48 H
+3AC ά => 3B1 α
+3AD έ => 3B5 ε
+3AE ή => 3B7 η
+3AF ί => 3B9 ι
+3B0 ΰ => 3C5 υ
 3B1 α => 61 a
 3B2 β => 42 B
 3B3 γ => 79 y
@@ -480,20 +495,34 @@ FF ÿ => 79 y
 3C7 χ => 58 X
 3C8 ψ => 3A8 Ψ
 3C9 ω => 77 w
+3CA ϊ => 3B9 ι
 3CB ϋ => 3C5 υ
 3CC ό => 3BF ο
 3CD ύ => 3C5 υ
+3CE ώ => 3C9 ω
+3CF Ϗ => 4B K
+3D0 ϐ => 3B2 β
 3D2 ϒ => 3B3 γ
 3D3 ϓ => 3B3 γ
+3D4 ϔ => 3B3 γ
 3D5 ϕ => 278 ɸ
+3D6 ϖ => 3C9 ω
+3D7 ϗ => 4E N
 3DC Ϝ => 46 F
 3DD ϝ => 66 f
 3E8 Ϩ => 32 2
 3E9 ϩ => 32 2
+3F1 ϱ => 70 p
 3F2 ϲ => 43 C
 3F3 ϳ => 6A j
 3F4 ϴ => 4F O
 3F9 Ϲ => 43 C
+3FA Ϻ => 4D M
+3FB ϻ => 3FA Ϻ
+3FC ϼ => 3F1 ϱ
+3FD Ͻ => 3F9 Ϲ
+3FE Ͼ => 3F9 Ϲ
+3FF Ͽ => 3FE Ͼ
 404 Є => 45 E
 405 Ѕ => 35 5
 406 І => 31 1
@@ -1065,6 +1094,7 @@ F0C ༌ => F0B ་
 1EF7 ỷ => 79 y
 1EF8 Ỹ => 59 Y
 1EF9 ỹ => 79 y
+1F00 ἀ => 3B1 α
 1F01 ἁ => 3B1 α
 1F02 ἂ => 3B1 α
 1F03 ἃ => 3B1 α
@@ -1072,6 +1102,7 @@ F0C ༌ => F0B ་
 1F05 ἅ => 3B1 α
 1F06 ἆ => 3B1 α
 1F07 ἇ => 3B1 α
+1F08 Ἀ => 391 Α
 1F09 Ἁ => 391 Α
 1F0A Ἂ => 391 Α
 1F0B Ἃ => 391 Α
@@ -1079,6 +1110,18 @@ F0C ༌ => F0B ་
 1F0D Ἅ => 391 Α
 1F0E Ἆ => 391 Α
 1F0F Ἇ => 391 Α
+1F10 ἐ => 3B5 ε
+1F11 ἑ => 3B5 ε
+1F12 ἒ => 3B5 ε
+1F13 ἓ => 3B5 ε
+1F14 ἔ => 3B5 ε
+1F15 ἕ => 3B5 ε
+1F18 Ἐ => 395 Ε
+1F19 Ἑ => 395 Ε
+1F1A Ἒ => 395 Ε
+1F1B Ἓ => 395 Ε
+1F1C Ἔ => 395 Ε
+1F1D Ἕ => 395 Ε
 1F20 ἠ => 3B7 η
 1F21 ἡ => 3B7 η
 1F22 ἢ => 3B7 η
@@ -1095,6 +1138,22 @@ F0C ༌ => F0B ་
 1F2D Ἥ => 397 Η
 1F2E Ἦ => 397 Η
 1F2F Ἧ => 397 Η
+1F30 ἰ => 3B9 ι
+1F31 ἱ => 3B9 ι
+1F32 ἲ => 3B9 ι
+1F33 ἳ => 3B9 ι
+1F34 ἴ => 3B9 ι
+1F35 ἵ => 3B9 ι
+1F36 ἶ => 3B9 ι
+1F37 ἷ => 3B9 ι
+1F38 Ἰ => 399 Ι
+1F39 Ἱ => 399 Ι
+1F3A Ἲ => 399 Ι
+1F3B Ἳ => 399 Ι
+1F3C Ἴ => 399 Ι
+1F3D Ἵ => 399 Ι
+1F3E Ἶ => 399 Ι
+1F3F Ἷ => 399 Ι
 1F40 ὀ => 3BF ο
 1F41 ὁ => 3BF ο
 1F42 ὂ => 3BF ο
@@ -1107,18 +1166,48 @@ F0C ༌ => F0B ་
 1F4B Ὃ => 39F Ο
 1F4C Ὄ => 39F Ο
 1F4D Ὅ => 39F Ο
+1F50 ὐ => 3C5 υ
 1F51 ὑ => 3C5 υ
+1F52 ὒ => 3C5 υ
 1F53 ὓ => 3C5 υ
+1F54 ὔ => 3C5 υ
 1F55 ὕ => 3C5 υ
+1F56 ὖ => 3C5 υ
 1F57 ὗ => 3C5 υ
 1F59 Ὑ => 3A5 Υ
 1F5B Ὓ => 3A5 Υ
 1F5D Ὕ => 3A5 Υ
 1F5F Ὗ => 3A5 Υ
+1F60 ὠ => 3C9 ω
+1F61 ὡ => 3C9 ω
+1F62 ὢ => 3C9 ω
+1F63 ὣ => 3C9 ω
+1F64 ὤ => 3C9 ω
+1F65 ὥ => 3C9 ω
+1F66 ὦ => 3C9 ω
+1F67 ὧ => 3C9 ω
+1F68 Ὠ => 3A9 Ω
+1F69 Ὡ => 3A9 Ω
+1F6A Ὢ => 3A9 Ω
+1F6B Ὣ => 3A9 Ω
+1F6C Ὤ => 3A9 Ω
+1F6D Ὥ => 3A9 Ω
+1F6E Ὦ => 3A9 Ω
+1F6F Ὧ => 3A9 Ω
 1F70 ὰ => 3B1 α
+1F71 ά => 3B1 α
+1F72 ὲ => 3B5 ε
+1F73 έ => 3B5 ε
 1F74 ὴ => 3B7 η
+1F75 ή => 3B7 η
+1F76 ὶ => 3B9 ι
+1F77 ί => 3B9 ι
 1F78 ὸ => 3BF ο
+1F79 ό => 3BF ο
 1F7A ὺ => 3C5 υ
+1F7B ύ => 3C5 υ
+1F7C ὼ => 3C9 ω
+1F7D ώ => 3C9 ω
 1F80 ᾀ => 3B1 α
 1F81 ᾁ => 3B1 α
 1F82 ᾂ => 3B1 α
@@ -1136,17 +1225,92 @@ F0C ༌ => F0B ་
 1F8E ᾎ => 391 Α
 1F8F ᾏ => 391 Α
 1F90 ᾐ => 3B7 η
+1F91 ᾑ => 3B7 η
+1F92 ᾒ => 3B7 η
+1F93 ᾓ => 3B7 η
+1F94 ᾔ => 3B7 η
+1F95 ᾕ => 3B7 η
+1F96 ᾖ => 3B7 η
+1F97 ᾗ => 3B7 η
 1F98 ᾘ => 397 Η
+1F99 ᾙ => 397 Η
+1F9A ᾚ => 397 Η
+1F9B ᾛ => 397 Η
+1F9C ᾜ => 397 Η
+1F9D ᾝ => 397 Η
+1F9E ᾞ => 397 Η
+1F9F ᾟ => 397 Η
+1FA0 ᾠ => 3C9 ω
+1FA1 ᾡ => 3C9 ω
+1FA2 ᾢ => 3C9 ω
+1FA3 ᾣ => 3C9 ω
+1FA4 ᾤ => 3C9 ω
+1FA5 ᾥ => 3C9 ω
+1FA6 ᾦ => 3C9 ω
+1FA7 ᾧ => 3C9 ω
+1FA8 ᾨ => 3A9 Ω
+1FA9 ᾩ => 3A9 Ω
+1FAA ᾪ => 3A9 Ω
+1FAB ᾫ => 3A9 Ω
+1FAC ᾬ => 3A9 Ω
+1FAD ᾭ => 3A9 Ω
+1FAE ᾮ => 3A9 Ω
+1FAF ᾯ => 3A9 Ω
+1FB0 ᾰ => 3B1 α
+1FB1 ᾱ => 3B1 α
+1FB2 ᾲ => 3B1 α
 1FB3 ᾳ => 3B1 α
+1FB4 ᾴ => 3B1 α
+1FB6 ᾶ => 3B1 α
+1FB7 ᾷ => 3B1 α
+1FB8 Ᾰ => 391 Α
+1FB9 Ᾱ => 391 Α
 1FBA Ὰ => 391 Α
+1FBB Ά => 391 Α
 1FBC ᾼ => 391 Α
+1FC2 ῂ => 3B7 η
+1FC3 ῃ => 3B7 η
+1FC4 ῄ => 3B7 η
+1FC6 ῆ => 3B7 η
+1FC7 ῇ => 3B7 η
+1FC8 Ὲ => 395 Ε
+1FC9 Έ => 395 Ε
 1FCA Ὴ => 397 Η
+1FCB Ή => 397 Η
+1FCC ῌ => 397 Η
+1FD0 ῐ => 3B9 ι
+1FD1 ῑ => 3B9 ι
+1FD2 ῒ => 3B9 ι
+1FD3 ΐ => 3B9 ι
+1FD6 ῖ => 3B9 ι
+1FD7 ῗ => 3B9 ι
+1FD8 Ῐ => 399 Ι
+1FD9 Ῑ => 399 Ι
+1FDA Ὶ => 399 Ι
+1FDB Ί => 399 Ι
 1FE0 ῠ => 3C5 υ
 1FE1 ῡ => 3C5 υ
+1FE2 ῢ => 3C5 υ
+1FE3 ΰ => 3C5 υ
+1FE4 ῤ => 3C1 ρ
+1FE5 ῥ => 3C1 ρ
+1FE6 ῦ => 3C5 υ
+1FE7 ῧ => 3C5 υ
 1FE8 Ῠ => 3A5 Υ
 1FE9 Ῡ => 3A5 Υ
 1FEA Ὺ => 3A5 Υ
+1FEB Ύ => 3A5 Υ
+1FEC Ῥ => 3A1 Ρ
+1FF2 ῲ => 3C9 ω
+1FF3 ῳ => 3C9 ω
+1FF4 ῴ => 3C9 ω
+1FF6 ῶ => 3C9 ω
+1FF7 ῷ => 3C9 ω
 1FF8 Ὸ => 39F Ο
+1FF9 Ό => 39F Ο
+1FFA Ὼ => 3A9 Ω
+1FFB Ώ => 3A9 Ω
+1FFC ῼ => 3A9 Ω
 200A   => 0 NUL
 200B ​ => 0 NUL
 200C ‌ => 0 NUL
