Add description to generate-equivset command
Also add a composer generate command to run it easily

Bug: T248017
Change-Id: I114882df53aa65b1c20882024a5542bfb93020db

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
 			"phan --allow-polyfill-parser --long-progress-bar",
 			"minus-x check ."
 		],
+		"generate": "php bin/console --ansi generate-equivset",
 		"phpunit": "php -d 'extension=pcov.so' vendor/bin/phpunit",
 		"cover": "php -d 'extension=pcov.so' vendor/bin/phpunit --coverage-html coverage",
 		"fix": [
